Fixex border radius overflowing

--- a/css/comp-training.css
+++ b/css/comp-training.css
@@ -215,6 +215,7 @@
 .tce-container {
     flex-shrink: 1;
     overflow: auto;
+    border-radius: 0 0 var(--excercise-border-radius) var(--excercise-border-radius);
 
     counter-reset: sets;
 
@@ -275,6 +276,7 @@
     width: 100%;
     height: calc(6px + 3.4 * 1.5em);
     border: none;
+    border-radius: 0;
 
     background-color: transparent;
     padding-left: 12px;
